# Office-letter-refinement-Project

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  crew.py
src/agents/: __init__.py  base.py  base_letter_agent.py  coherence_agent.py  grammar_agent.py  manager_agent.py  orchestrator_agent.py  review_agent.py  tone_agent.py
src/utils/: docx_utils.py
